mod: nome-estagiario-demutran

--- a/index.html
+++ b/index.html
@@ -190,26 +190,37 @@
                                                 </li>
                                             </ul>
                                         </li>
-                                    </li>
-                                </ul>
-                            </li>
-                        <li class="tree-node">
-                            <a href="#" class="node-link funcionario funcionario">
-                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                <span class="node-label">Demutran</span>
-                            </a>
-                            <ul class="sub-funcionarios">
+                                    </ul>
+                                </li>
                                 <li class="tree-node">
-                                    <a href="#" class="node-link">
-                                        <img src="imagens/francisca.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">Francisca</span>
-                                        <p class="node-label-cargo">SERVIDORA</p>
+                                    <a href="#" class="node-link funcionario funcionario">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Demutran</span>
                                     </a>
+                                    <ul class="sub-funcionarios">
+                                        <li class="tree-node">
+                                            <a href="#" class="node-link">
+                                                <img src="imagens/francisca.jpg" alt="Employee Image" class="node-image">
+                                                <span class="node-label">Francisca</span>
+                                                <p class="node-label-cargo">SERVIDORA</p>
+                                            </a>
+                                            <ul class="sub-sub-funcionarios">
+                                                <li class="tree-node">
+                                                    <a href="#" class="node-link">
+                                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                                        <span class="node-label">Leonardo</span>
+                                                    </a>
+                                                <li class="tree-node">
+                                                    <a href="#" class="node-link">
+                                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                                        <span class="node-label">Kayo</span>
+                                                    </a>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                    </ul>
                                 </li>
                             </ul>
-                        </li>
-                    </ul>
-                </li>
             </ul>
             </li>
             <li class="tree-node">
