mod: cargo estágiario

--- a/index.html
+++ b/index.html
@@ -99,13 +99,50 @@
                                 <li class="tree-node">
                                     <a href="#" class="node-link">
                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">Estagiário</span>
+                                        <span class="node-label">Ana Clara</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
                                     </a>
                                 </li>
                                 <li class="tree-node">
                                     <a href="#" class="node-link">
                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">Estagiário</span>
+                                        <span class="node-label">Kaique</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Leonardo</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Jhonatan</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Gabriela</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Rafaela</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Kaiki</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
                                     </a>
                                 </li>
                             </ul>
@@ -142,50 +179,59 @@
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                                         <span class="node-label">Alana</span>
+                                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
                                                     </a>
                                                 <li class="tree-node">
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                                         <span class="node-label">Thais</span>
+                                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
                                                     </a>
                                                 <li class="tree-node">
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                                         <span class="node-label">Caroline</span>
+                                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
                                                     </a>
                                                 <li class="tree-node">
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                                         <span class="node-label">Fernando</span>
+                                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
                                                     </a>
                                                 <li class="tree-node">
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                                         <span class="node-label">Cristopher</span>
+                                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
                                                     </a>
                                                 </li>
                                                 <li class="tree-node">
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                                         <span class="node-label">Gabriela</span>
+                                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
                                                     </a>
                                                 </li>
                                                 <li class="tree-node">
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                                         <span class="node-label">Dandara</span>
+                                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
                                                     </a>
                                                 </li>
                                                 <li class="tree-node">
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                                         <span class="node-label">Jennifer</span>
+                                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
                                                     </a>
                                                 </li>
                                                 <li class="tree-node">
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                                         <span class="node-label">Francine</span>
+                                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
                                                     </a>
                                                 </li>
                                             </ul>
@@ -209,11 +255,13 @@
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                                         <span class="node-label">Leonardo</span>
+                                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
                                                     </a>
                                                 <li class="tree-node">
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                                         <span class="node-label">Kayo</span>
+                                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
                                                     </a>
                                                 </li>
                                             </ul>
@@ -221,59 +269,60 @@
                                     </ul>
                                 </li>
                             </ul>
-            </ul>
-            </li>
-            <li class="tree-node">
-                <a href="#" class="node-link setor">
-                    <img src="images/2.jpg" alt="Setor Image" class="node-image">
-                    <span class="node-label">Unidade de Conciliação</span>
-                </a>
-                <ul class="coordenadores">
-                    <li class="tree-node">
-                        <a href="#" class="node-link coordenador">
-                            <img src="imagens/silvana.jpg" alt="Coordenador Image" class="node-image">
-                            <span class="node-label">Silvana</span>
-                            <p class="node-label-cargo">SERVIDORA</p>
-                        </a>
-                        <ul class="funcionarios">
-                            <li class="tree-node">
-                                <a href="#" class="node-link">
-                                    <img src="imagens/josé.jpg" alt="Employee Image" class="node-image">
-                                    <span class="node-label">José Davi</span>
-                                    <p class="node-label-cargo">SERVIDOR</p>
-                                </a>
-                                <ul class="sub-sub-funcionarios">
-                                    <li class="tree-node">
-                                        <a href="#" class="node-link">
-                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Estagiário</span>
-                                        </a>
-                                    <li class="tree-node">
-                                        <a href="#" class="node-link">
-                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Estagiário</span>
-                                        </a>
-                                    <li class="tree-node">
-                                        <a href="#" class="node-link">
-                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Estagiário</span>
-                                        </a>
-                                    <li class="tree-node">
-                                        <a href="#" class="node-link">
-                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Estagiário</span>
-                                        </a>
-                                    <li class="tree-node">
-                                        <a href="#" class="node-link">
-                                            <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Estagiário</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-            </li>
+                        </li>
+                    </ul>
+                </li>
+                <li class="tree-node">
+                    <a href="#" class="node-link setor">
+                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <span class="node-label">Unidade de Conciliação</span>
+                    </a>
+                    <ul class="coordenadores">
+                        <li class="tree-node">
+                            <a href="#" class="node-link coordenador">
+                                <img src="imagens/silvana.jpg" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">Silvana</span>
+                                <p class="node-label-cargo">SERVIDORA</p>
+                            </a>
+                            <ul class="funcionarios">
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="imagens/josé.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">José Davi</span>
+                                        <p class="node-label-cargo">SERVIDOR</p>
+                                    </a>
+                                    <ul class="sub-sub-funcionarios">
+                                        <li class="tree-node">
+                                            <a href="#" class="node-link">
+                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                                <span class="node-label">Estagiário</span>
+                                            </a>
+                                        <li class="tree-node">
+                                            <a href="#" class="node-link">
+                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                                <span class="node-label">Estagiário</span>
+                                            </a>
+                                        <li class="tree-node">
+                                            <a href="#" class="node-link">
+                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                                <span class="node-label">Estagiário</span>
+                                            </a>
+                                        <li class="tree-node">
+                                            <a href="#" class="node-link">
+                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                                <span class="node-label">Estagiário</span>
+                                            </a>
+                                        <li class="tree-node">
+                                            <a href="#" class="node-link">
+                                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                                <span class="node-label">Estagiário</span>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                </li>
             </ul>
             </li>
             <li class="tree-node">
