upd: setor citran

--- a/index.html
+++ b/index.html
@@ -275,6 +275,37 @@
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
                         <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <span class="node-label">Citran</span>
+                    </a>
+                    <ul class="coordenadores">
+                        <li class="tree-node">
+                            <a href="#" class="node-link coordenador">
+                                <img src="imagens/carlos borchardt.jpg" alt="Coordenador Image" class="node-image">
+                                <span class="node-label">Carlos</span>
+                                <p class="node-label-cargo">SERVIDOR</p>
+                            </a>
+                            <ul class="funcionarios">
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Guilherme</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                    </a>
+                                </li>
+                                <li class="tree-node">
+                                    <a href="#" class="node-link">
+                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">?</span>
+                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+                <li class="tree-node">
+                    <a href="#" class="node-link setor">
+                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
                         <span class="node-label">Unidade de Conciliação</span>
                     </a>
                     <ul class="coordenadores">
