mod:alteração no cargo

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                     <a href="#" class="node-link">
                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">Ana Clara</span>
-                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
                                     </a>
                                 </li>
                                 <li class="tree-node">
@@ -159,14 +159,14 @@
                                     <a href="#" class="node-link">
                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">Gabriela</span>
-                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
                                     </a>
                                 </li>
                                 <li class="tree-node">
                                     <a href="#" class="node-link">
                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                         <span class="node-label">Rafaela</span>
-                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
                                     </a>
                                 </li>
                                 <li class="tree-node">
@@ -210,19 +210,19 @@
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                                         <span class="node-label">Alana</span>
-                                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
                                                     </a>
                                                 <li class="tree-node">
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                                         <span class="node-label">Thais</span>
-                                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
                                                     </a>
                                                 <li class="tree-node">
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                                         <span class="node-label">Caroline</span>
-                                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
                                                     </a>
                                                 <li class="tree-node">
                                                     <a href="#" class="node-link">
@@ -241,28 +241,28 @@
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                                         <span class="node-label">Gabriela</span>
-                                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
                                                     </a>
                                                 </li>
                                                 <li class="tree-node">
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                                         <span class="node-label">Dandara</span>
-                                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
                                                     </a>
                                                 </li>
                                                 <li class="tree-node">
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                                         <span class="node-label">Jennifer</span>
-                                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
                                                     </a>
                                                 </li>
                                                 <li class="tree-node">
                                                     <a href="#" class="node-link">
                                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
                                                         <span class="node-label">Francine</span>
-                                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
+                                                        <p class="node-label-cargo">ESTAGIÁRIA</p>
                                                     </a>
                                                 </li>
                                             </ul>
