upd:setor triagem

--- a/index.html
+++ b/index.html
@@ -86,6 +86,43 @@
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
                         <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <span class="node-label">Triagem</span>
+                    </a>
+                    <ul class="funcionarios">
+                        <li class="tree-node">
+                            <a href="#" class="node-link">
+                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Bianca</span>
+                                <p class="node-label-cargo">ESTAGIÁRIA</p>
+                            </a>
+                        </li>
+                        <li class="tree-node">
+                            <a href="#" class="node-link">
+                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Denise</span>
+                                <p class="node-label-cargo">ESTAGIÁRIA</p>
+                            </a>
+                        </li>
+                        <li class="tree-node">
+                            <a href="#" class="node-link">
+                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Liz</span>
+                                <p class="node-label-cargo">ESTAGIÁRIA</p>
+                            </a>
+                        </li>
+                        <li class="tree-node">
+                            <a href="#" class="node-link">
+                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Carlos</span>
+                                <p class="node-label-cargo">ESTAGIÁRIO</p>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                </li>
+                <li class="tree-node">
+                    <a href="#" class="node-link setor">
+                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
                         <span class="node-label">Sine</span>
                     </a>
                     <ul class="coordenadores">
