mod:organização dos est.

--- a/index.html
+++ b/index.html
@@ -119,6 +119,41 @@
                         </li>
                     </ul>
                 </li>
+                <li class="tree-node">
+                    <a href="#" class="node-link setor">
+                        <img src="images/2.jpg" alt="Setor Image" class="node-image">
+                        <span class="node-label">Call Center</span>
+                    </a>
+                    <ul class="funcionarios">
+                        <li class="tree-node">
+                            <a href="#" class="node-link">
+                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Mariana</span>
+                                <p class="node-label-cargo">ESTAGIÁRIA</p>
+                            </a>
+                        </li>
+                        <li class="tree-node">
+                            <a href="#" class="node-link">
+                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Neusa</span>
+                                <p class="node-label-cargo">ESTAGIÁRIA</p>
+                            </a>
+                        </li>
+                        <li class="tree-node">
+                            <a href="#" class="node-link">
+                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Jessica</span>
+                                <p class="node-label-cargo">ESTAGIÁRIA</p>
+                            </a>
+                        </li>
+                        <li class="tree-node">
+                            <a href="#" class="node-link">
+                                <img src="images/3.jpg" alt="Employee Image" class="node-image">
+                                <span class="node-label">Eymmi</span>
+                                <p class="node-label-cargo">ESTAGIÁRIA</p>
+                            </a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="tree-node">
                     <a href="#" class="node-link setor">
@@ -318,21 +353,6 @@
                                                 <span class="node-label">Francisca</span>
                                                 <p class="node-label-cargo">SERVIDORA</p>
                                             </a>
-                                            <ul class="sub-sub-funcionarios">
-                                                <li class="tree-node">
-                                                    <a href="#" class="node-link">
-                                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                        <span class="node-label">Leonardo</span>
-                                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
-                                                    </a>
-                                                <li class="tree-node">
-                                                    <a href="#" class="node-link">
-                                                        <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                                        <span class="node-label">Kayo</span>
-                                                        <p class="node-label-cargo">ESTAGIÁRIO</p>
-                                                    </a>
-                                                </li>
-                                            </ul>
                                         </li>
                                     </ul>
                                 </li>
@@ -363,7 +383,7 @@
                                 <li class="tree-node">
                                     <a href="#" class="node-link">
                                         <img src="images/3.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">?</span>
+                                        <span class="node-label">Kayo</span>
                                         <p class="node-label-cargo">ESTAGIÁRIO</p>
                                     </a>
                                 </li>
